# false-sharing-demo

./: .gitignore  CONTEXT.md  README.md
.github/workflows/: add-to-project.yml  heuristic-eval.yml
false-sharing-lab/: README.md
false-sharing-lab/agent/: agent.py  requirements.txt
false-sharing-lab/c_benchmark/: Makefile  false_sharing.c
false-sharing-lab/reports/: sample_analysis.md
false-sharing-lab/results/: sample_benchmark_results.csv
false-sharing-lab/static_analysis/: Makefile  SOA.md  STRATEGY.md  TIER2_DESIGN.md  WORKPLAN.md  analysis_agent.py  evaluate.py  ir_analyzer.py  scan.py  tier2_analyzer.py
false-sharing-lab/static_analysis/corpus/: labels.json
false-sharing-lab/static_analysis/corpus/advanced/: adv_tn_alignas_atomics.c  adv_tn_malloc_per_thread.c  adv_tn_private_two_fields.c  adv_tn_private_via_helper.c  adv_tn_readonly_tid_array.c  adv_tp_boundary_args.c  adv_tp_deceptive_padding.c  adv_tp_global_scalar_array.c  adv_tp_heap_scalar_array.c  adv_tp_mutex_data_same_line.c  adv_tp_nested_inner_fields.c  adv_tp_ring_head_tail.c  adv_tp_stats_array.c
false-sharing-lab/static_analysis/corpus/basic/: edge_fnptr_entry.c  tn_h1_separate_lines.c  tn_h2_aligned_attr.c  tn_h2_padded_array.c  tn_readonly_sharing.c  tn_single_thread.c  tp_h1_hot_fields.c  tp_h2_tid_array.c  tp_h3_adjacent_atomics.c  tp_h5_adjacent_globals.c
false-sharing-lab/static_analysis/results/: external_validation.md  heuristic_scores_tier1.md  heuristic_scores_tier2.md  scan_parsec.json  scan_parsec.md
false-sharing-lab/static_analysis/tier2_pass/: CMakeLists.txt  FalseSharingPass.cpp  build.sh
