# BUILD OUT-OF-TREE LLVM PLUGIN. NEW PASS MANAGER. opt LOAD THIS .so.
# NOT LINK LLVM LIB. SYMBOL COME FROM opt AT LOAD TIME. PLUGIN THIN.

cmake_minimum_required(VERSION 3.20)
project(FalseSharingPass LANGUAGES CXX)

# FIND LLVM. apt PUT CMAKE CONFIG AT /usr/lib/llvm-18/lib/cmake/llvm.
# build.sh PASS -DLLVM_DIR FROM `llvm-config-18 --cmakedir` SO WE GET 18.
# NOTE: LLVM CONFIG VERSION FILE WANT EXACT MATCH, SO NOT PIN "18" HERE.
# PIN MAJOR 18 BY HAND AFTER. HARD FAIL IF WRONG LLVM.
find_package(LLVM REQUIRED CONFIG)
message(STATUS "FOUND LLVM ${LLVM_PACKAGE_VERSION}")
message(STATUS "LLVM CMAKE DIR ${LLVM_DIR}")
if(NOT LLVM_VERSION_MAJOR EQUAL 18)
  message(FATAL_ERROR "NEED LLVM 18. GOT ${LLVM_PACKAGE_VERSION}. ABI LOCK.")
endif()

# NEED LLVM HEADER. NEED LLVM DEFINE.
add_definitions(${LLVM_DEFINITIONS})
include_directories(SYSTEM ${LLVM_INCLUDE_DIRS})

# C++17. SAME AS LLVM 18 WANT.
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# NO RTTI. LLVM BUILT NO RTTI. MISMATCH = LINK BOOM AT LOAD.
if(NOT LLVM_ENABLE_RTTI)
  add_compile_options(-fno-rtti)
endif()

# TREAT WARNING SERIOUS.
add_compile_options(-Wall -Wextra)

# BUILD SHARED MODULE. NAME EXACT FalseSharingPass.so (NO lib PREFIX).
add_library(FalseSharingPass MODULE FalseSharingPass.cpp)
set_target_properties(FalseSharingPass PROPERTIES PREFIX "")

# ON LINUX, PLUGIN LEAVE LLVM SYMBOL UNDEFINED (RESOLVED BY opt HOST).
# DO NOT ERROR ON UNDEFINED SYMBOL.
target_link_options(FalseSharingPass PRIVATE -Wl,--allow-shlib-undefined)
